--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -7,7 +7,7 @@
     </div>
   
     <div class="container-fluid mt-4">
-      <div class="row">
+      <div class="row filterBar">
         <div class="col-md-8">
           <form class="form-inline">
             <div class="form-group pr-2">
