bug fixes in roster

--- a/app/views/trips/angular_views/_roster.html
+++ b/app/views/trips/angular_views/_roster.html
@@ -426,7 +426,7 @@
       <div class="vaayu-modal-header">
 
         <span>{{selectedRoster.name}}</span>
-        <span class="vaayu-pop-close closepop" ng-click="showPopup=false">&times;</span>
+        <span class="vaayu-pop-close closepop" ng-click="closePopUp()">&times;</span>
       </div>
       <div class="vaayu-modal-body">
         <div class="row container-fluid">
