constraint from changes

--- a/app/views/configurators/angular_views/_constraint.html
+++ b/app/views/configurators/angular_views/_constraint.html
@@ -329,7 +329,7 @@
             <!-- <add-zone></add-zone> -->
             <!-- <h3 class="mb-2">Configurator Tab Content</h3> -->
             <div class="tab-content-area" style="position: relative; overflow: hidden;">
-                <form novalidate class="simple-form config-form" name="config-form">
+                <form novalidate class="simple-form config-form" name="configForm">
                     <div class="row mb-2 ">
                         <div class="col-md-3">
                             <label class="text-label">WE Cutoff Checkin (hrs): </label>
