Removed unassignedvroute tripId from header

--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -329,7 +329,7 @@
                               <div class="employee-cluster-panel-heading"
                                 ng-class="container.vehicle_allocated === 'Y'?'allocated_route':'un_allocated_route'">
                                 <div class="title_container">
-                                  <span class="title_text" >TP{{container.tripId+' | '+container.vehicle_type}}  </span>
+                                  <span class="title_text" >{{container.vehicle_type | uppercase}}  </span>
                                 </div>
                               </div>
   
