--- a/app/views/trips/angular_views/_roster.html
+++ b/app/views/trips/angular_views/_roster.html
@@ -253,16 +253,18 @@
                 <div class="col-md-12">
                 <div class="row" ng-if="key != 'TRUCK'">
                 <div class="col-md-4">
-                  <img ng-if="key== 'SUV'" src="../assets/angular_images/ic_suv.png"
+                  <img ng-if="key== 'SUV'" src="../assets/angular_images/img_SUV.png"
                     style="padding: 15px; height: 75px;">
-                  <img ng-if="key== 'TT'" src="../assets/angular_images/ic_tt.png" style="padding: 15px; height: 75px;">
-                  <img ng-if="key== 'SEDAN'" src="../assets/angular_images/ic_sedan.png"
+                  <img ng-if="key== 'TT'" src="../assets/angular_images/img_TT.png" style="padding: 15px; height: 75px;">
+                  <img ng-if="key== 'SEDAN'" src="../assets/angular_images/img_SEDAN.png"
                     style="padding: 15px; height: 75px;">
-                  <img ng-if="key== 'HATCHBACK'" src="../assets/angular_images/ic_hatchback.png" style="height: 42px;">
-                  <img ng-if="key== 'MINI VAN'" src="../assets/angular_images/ic_minivan.png"
+                  <img ng-if="key== 'HATCHBACK'" src="../assets/angular_images/img_HACTCHBACK.png" style="height: 42px;">
+                  <img ng-if="key== 'MINI VAN'" src="../assets/angular_images/img_HACTCHBACK.png"
+                    style="padding: 15px; height: 75px;">
+                  <img ng-if="key== 'BUS'" src="../assets/angular_images/img_BUS.png"
                     style="padding: 15px; height: 75px;">
                   <span class="text-center text-key-name"
-                    ng-if="!(key== 'SEDAN' || key== 'TT' || key== 'SUV' || key== 'HATCHBACK' || key== 'MINI VAN')"
+                    ng-if="!(key== 'SEDAN' || key== 'TT' || key== 'SUV' || key== 'HATCHBACK' || key== 'MINI VAN' || key== 'BUS')"
                     style="display: block; margin-left: 35px; text-align: left !important;">{{key}}</span>
                 </div>
                 <div class="col-md-2"></div>
