--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -172,7 +172,7 @@
                                   <span class="title_text">TP{{container.tripId+' | '+container.vehicle_type}}  </span>
                                 </div>
                               </div>
-                              <div class="employee-cluster-panel-body" ng-click='getCurrentVehicleLocation()'>
+                              <div class="employee-cluster-panel-body">
                                 <div class="employee-cluster-panel-heading-meta">
                                   <div class="employee-cluster-panel-title">
                                     <div class="row">
@@ -333,7 +333,7 @@
                                 </div>
                               </div>
   
-                              <div class="employee-cluster-panel-body" ng-click='getCurrentVehicleLocation()'>
+                              <div class="employee-cluster-panel-body">
                                 <ul class="employee-list-group isSccorallable" set-height2 dnd-list="container.employees" dnd-allowed-types="['item']"
                                   dnd-horizontal-list="true" dnd-external-sources="true" dnd-effect-allowed="all"
                                   dnd-dragover="dragoverCallback(container,index, external, type)"
