--- a/app/views/trips/angular_views/_role_access.html
+++ b/app/views/trips/angular_views/_role_access.html
@@ -25,7 +25,7 @@
                                 </td>
                                 <td></td>
                             </tr>
-                            <tr ng-repeat="row in tableRow">
+                            <tr ng-repeat="row in roleModuleAccess">
                                 <td>
                                     {{row.role_name_view}}
                                 </td>
